--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
     "simple-react-lightbox": "^3.6.9-0",
+    "sweetalert2": "^11.1.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
