--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "material-table": "^1.69.3",
     "mui-datatables": "^3.7.7",
     "react": "^17.0.2",
