--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mui-datatables": "^3.7.7",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
+    "react-chat-engine": "^1.11.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
     "react-icons": "^4.2.0",
